@@ -7,6 +7,7 @@ Version 1.0.7
 * Fix TR3 Shiva not taking explosive damage (should still block it with the sword).
 * Fix TR3 Puna boss not blocking projectiles (grenade, rocket, harpoon, bolt) with the shield.
 * Fix TR3 Puna boss and TR5 Roman statue taking fire when shot by explosive ammo.
+* Fix TR3 big gun spawning rocket with 0 life which cause a direct explosion.
 * Fix valve switch unable to untrigger objects.
 * Fix valve and wall hole switches (OCB 5 and 6) not working as a timed switches.
 * Fix silent crash if hair object or skin joints are missing.
